# scratch

sbg/: Makefile  Makefile.project  README.md  kmer_analyzer.cpp  kmer_analyzer.h  kmer_analyzer_test.cpp  kmers.cpp  runner.cpp  small.fastq  utils.cpp  utils.h
sbg/test/: CMakeLists.txt  smallest.fastq
